# alc-gw-p4

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
components/mbedtls/mbedtls/: .readthedocs.yaml  CMakeLists.txt  sbom.yml
components/mbedtls/mbedtls/visualc/VS2017/: mbedTLS.vcxproj
components/rtsp_client/: CMakeLists.txt
components/rtsp_client/host_test/: CMakeLists.txt
components/rtsp_client/host_test/main/: CMakeLists.txt  test_h264_depacket.c  test_main.c  test_rtsp_client.c  test_rtsp_demux.c  test_rtsp_digest.c  test_rtsp_sdp.c
components/rtsp_client/include/: h264_depacket.h  rtsp_client.h  rtsp_demux.h  rtsp_digest.h  rtsp_sdp.h
components/rtsp_client/src/: h264_depacket.c  rtsp_client.c  rtsp_demux.c  rtsp_digest.c  rtsp_io_socket.c  rtsp_io_socket.h  rtsp_sdp.c
docs/: hardware-notes.md
examples/hello_world/: sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  auth_http.c  auth_http.h  console_cmds.c  console_cmds.h  credential.c  credential.h  eth_init.c  eth_init.h  hub_link.c  hub_link.h  idf_component.yml  main.c  ota_link.c  ota_link.h  recorder_link.c  recorder_link.h  relay.c  relay.h  signaling_client.c  signaling_client.h  whip_client.c  whip_client.h  ws_client.c  ws_client.h
